--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   background: rgb(146 159 155);
+  font-family: arial;
 }
 
 .app-container {
@@ -26,4 +27,47 @@ body {
 .grape-img:hover {
   transform: scale(1.2);
   cursor: grab;
+}
+
+.info-container {
+  position: fixed;
+  padding: 8px;
+  color: white;
+  max-width: 200px;
+}
+
+.info {
+  padding: 8px;
+  background: #1D1F20;
+}
+
+/* Cool gradient border I got from https://speckyboy.com/css-border-effects/ */
+.gradient-border {
+  --borderWidth: 3px;
+  position: relative;
+  border-radius: var(--borderWidth);
+}
+.gradient-border:after {
+  content: '';
+  position: absolute;
+  top: calc(-1 * var(--borderWidth));
+  left: calc(-1 * var(--borderWidth));
+  height: calc(100% + var(--borderWidth) * 2);
+  width: calc(100% + var(--borderWidth) * 2);
+  background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
+  border-radius: calc(2 * var(--borderWidth));
+  z-index: -1;
+  animation: animatedgradient 3s ease alternate infinite;
+  background-size: 300% 300%;
+}
+@keyframes animatedgradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
