--- a/style.css
+++ b/style.css
@@ -30,10 +30,13 @@ body {
 }
 
 .info-container {
-  position: fixed;
+  position: absolute;
   padding: 8px;
   color: white;
   max-width: 200px;
+  opacity: 0;
+  transform: scale(0);
+  transition: all 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
 
 .info {
