--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body {
 
 .info {
   padding: 8px;
-  background: #1D1F20;
+  background: #4287f5;
 }
 
 /* Cool gradient border I got from https://speckyboy.com/css-border-effects/ */
