--- a/style.css
+++ b/style.css
@@ -61,3 +61,24 @@ body {
 .info-modal-text-content {
   overflow: auto;
 }
+
+#floatedleft{
+    float: left;
+	margin-right: 10px;
+	margin-left: 10px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+#floatedright{
+	float: right;
+	margin-left: 10px;
+	margin-right: 10px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+p {
+	margin-left: 20px;
+	margin-right: 20px;
+}
