--- a/style.css
+++ b/style.css
@@ -78,6 +78,14 @@ body {
 	margin-bottom: 10px;
 }
 
+#lastpic{
+	margin-left: 20px;
+}
+
+#spacing{
+	margin-right: 400px;
+}
+
 p {
 	margin-left: 20px;
 	margin-right: 20px;
